tests/tooling/fixtures/native/execution/negative/binary_literal_global_divide_by_zero.objc3
module BinaryLiteralGlobalDivideByZero;

let value = 0b10 / 0b0;

fn main() -> i32 {
  return value;
}
